--- a/style.css
+++ b/style.css
@@ -1,3 +1,81 @@
+.card {
+  width: 18.75rem;
+  height: 9.375rem;
+  overflow: inherit;
+  background: rgb(39, 38, 44);
+  border-radius: 1.5rem;
+  width: 18.75rem;
+  height: 9.375rem;
+  overflow: inherit;
+  background: rgb(39, 38, 44);
+  border-radius: 1.5rem;
+  border-bottom-left-radius: 30%;
+}
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25rem;
+  background-color: lightblue;
+}
+body aside {
+  background-color: white;
+  width: 26.25rem;
+  height: 15.625rem;
+}
+body aside.first div.color {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+body aside.first div.color > p {
+  align-self: center;
+  font-weight: bold;
+}
+body aside.first div.color > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body aside.first div.color > div pre {
+  margin: 0%;
+  text-align: left;
+  margin-right: auto;
+}
+body aside.first div.color > div pre > span {
+  color: gray;
+}
+body aside.first div.color > div div.purple {
+  margin: 0 0.3125rem 0.1875rem 0.1875rem;
+  height: 3.75rem;
+  width: 3.75rem;
+  border-radius: 100%;
+  background-color: #9a6aff;
+}
+body aside.first div.color > div div.blue {
+  margin: 0 0.3125rem 0.1875rem 0.1875rem;
+  height: 3.75rem;
+  width: 3.75rem;
+  border-radius: 100%;
+  background-color: #1fc7d4;
+}
+body aside.first div.color > div div.orange {
+  margin: 0 0.3125rem 0.1875rem 0.1875rem;
+  height: 3.75rem;
+  width: 3.75rem;
+  border-radius: 100%;
+  background-color: #ffb237;
+}
+body aside.third {
+  height: 32.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
