Add button section

--- a/_designSystem.scss
+++ b/_designSystem.scss
@@ -165,3 +165,75 @@ aside {
 }
 
 /*Fine parte Icons -- Massimo Caser --*/
+
+
+/*Inizio parte buttons - Francesco*/
+aside.third{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: convertpx(10px);
+
+        >p{
+            border-top: 1px solid black;
+            padding-top: convertpx(25px);
+            width: 100%;
+            text-align: center;
+            font-weight: bold;
+            margin-top: convertpx(25px);
+        }
+
+        div.buttons{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            align-items: center;
+
+                p{
+                width: 100%;
+                text-align: center;
+                font-weight: bold;
+                margin-top: convertpx(25px);
+                }
+
+            div{
+                font-family: $fontFamily;
+                font-weight: $fontLightWeight;
+                button{
+                    @include button;
+                    width: convertpx(150px);
+
+                    &.arrow-bluebutton-white img{
+                        filter: brightness(0) invert(1);
+                    }
+
+                    &.arrow-bluebutton-black{
+                        color: black;
+                        img{
+                            filter: brightness(0%);
+                        }
+                    } 
+                    
+                    &.transparent-button{
+                        background-color: transparent;
+                        color: $buttonBlue;
+                        border: 3px solid $buttonBlue;
+                        box-shadow: none;
+                    }
+                    
+                    &:hover{
+                        opacity: 50%;
+                    }
+
+
+                }
+
+                p{
+                    margin-top: convertpx(10px);
+                    border: none;
+                    padding: 0;
+                }
+            }
+
+        }
+}
