--- a/style.css
+++ b/style.css
@@ -106,5 +106,82 @@ aside.third path.color-svg {
 }
 
 /*Fine parte Icons -- Massimo Caser --*/
+/*Inizio parte buttons - Francesco*/
+aside.third {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.625rem;
+}
+aside.third > p {
+  border-top: 1px solid black;
+  padding-top: 1.5625rem;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1.5625rem;
+}
+aside.third div.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+aside.third div.buttons p {
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1.5625rem;
+}
+aside.third div.buttons div {
+  font-family: "Kanit";
+  font-weight: 400;
+}
+aside.third div.buttons div button {
+  align-items: center;
+  border: 0px;
+  border-radius: 1rem;
+  box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  justify-content: center;
+  letter-spacing: 0.03em;
+  line-height: 1;
+  opacity: 1;
+  outline: 0px;
+  transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+  height: 3rem;
+  padding: 0px 1.5rem;
+  background-color: #1fc7d4;
+  color: white;
+  margin-right: 0.5rem;
+  width: 9.375rem;
+}
+aside.third div.buttons div button.arrow-bluebutton-white img {
+  filter: brightness(0) invert(1);
+}
+aside.third div.buttons div button.arrow-bluebutton-black {
+  color: black;
+}
+aside.third div.buttons div button.arrow-bluebutton-black img {
+  filter: brightness(0%);
+}
+aside.third div.buttons div button.transparent-button {
+  background-color: transparent;
+  color: #1fc7d4;
+  border: 3px solid #1fc7d4;
+  box-shadow: none;
+}
+aside.third div.buttons div button:hover {
+  opacity: 50%;
+}
+aside.third div.buttons div p {
+  margin-top: 0.625rem;
+  border: none;
+  padding: 0;
+}
 
 /*# sourceMappingURL=style.css.map */
