--- a/_designSystem.scss
+++ b/_designSystem.scss
@@ -355,6 +355,7 @@ aside.third {
             }
 
         }
+
         &>div.description {
             p:first-of-type {
                 color: rgb(244, 238, 255);
@@ -373,6 +374,7 @@ aside.third {
             }
 
         }
+
         &>div.body {
             p:first-of-type {
                 color: rgb(154, 106, 255);
@@ -461,9 +463,9 @@ input:invalid,
 
 .components {
     height: 100%;
-   display: flex;
-   flex: 1;
-   flex-flow: column nowrap;
+    display: flex;
+    flex: 1;
+    flex-flow: column nowrap;
     background: rgba(138, 126, 155, 0.359);
     margin: 1rem;
     padding: convertpx(8px);
@@ -474,7 +476,11 @@ input:invalid,
         display: flex;
         flex-flow: column no;
         gap: convertpx(10px);
-        .nftcard { @include cardNewestArrivals;}
+
+        .nftcard {
+            @include cardNewestArrivals;
+        }
+
         .swap {
             @include card;
             width: convertpx(328px);
@@ -488,31 +494,35 @@ input:invalid,
                 flex-flow: column nowrap;
                 align-items: center;
                 flex: 1;
+
                 &>p {
                     color: rgb(184, 173, 210);
                     font-weight: 400;
                     line-height: 1.5;
-                    font-size: 14px;                }
-              
-                &>div {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                width: 100%;
-                height: 10px;
-                &>div:first-of-type {
-                    display: flex;
-                    justify-content: flex-end;
+                    font-size: 14px;
                 }
-                &>div:last-of-type {
-                    margin-left: 1rem;
+
+                &>div {
                     display: flex;
                     align-items: center;
+                    justify-content: space-between;
+                    width: 100%;
+                    height: 10px;
 
-                    
-                    gap: 10px;
+                    &>div:first-of-type {
+                        display: flex;
+                        justify-content: flex-end;
+                    }
 
-                }
+                    &>div:last-of-type {
+                        margin-left: 1rem;
+                        display: flex;
+                        align-items: center;
+
+
+                        gap: 10px;
+
+                    }
                 }
             }
 
@@ -521,22 +531,27 @@ input:invalid,
                 display: flex;
                 flex-flow: column nowrap;
                 align-items: center;
-            >button {
-                @include card;
-                width: inherit;
-                height: inherit;
-               border: none;
-                svg {
-                    fill: color.$buttonBlue;
+
+                >button {
+                    @include card;
+                    width: inherit;
+                    height: inherit;
+                    border: none;
+
+                    svg {
+                        fill: color.$buttonBlue;
+                    }
                 }
-            }
-                &>div:first-of-type>div, &>div:nth-of-type(2)>div {
+
+                &>div:first-of-type>div,
+                &>div:nth-of-type(2)>div {
                     display: flex;
                     align-items: center;
 
                 }
 
-                &>div:first-of-type>div>p, &>div:nth-of-type(2)>div>p {
+                &>div:first-of-type>div>p,
+                &>div:nth-of-type(2)>div>p {
                     font-size: 1rem;
                 }
 
@@ -547,6 +562,7 @@ input:invalid,
                     padding: 5px 10px 0 5px;
                     vertical-align: -50%;
                 }
+
                 &>div:nth-of-type(2)>div::before {
                     content: url("data:image/svg+xml,%3Csvg viewBox='0 0 96 96' width='24px' color='text' xmlns='http://www.w3.org/2000/svg' class='sc-eaf7e66-0 klAPmK'%3E%3Ccircle cx='48' cy='48' r='48' fill='url(%23paint0_linear_10493)'%3E%3C/circle%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M47.858 79.875c-9.342-.007-16.866-2.249-22.124-6.275-5.321-4.075-8.144-9.857-8.144-16.4 0-6.304 2.817-10.85 6.004-13.923 2.497-2.408 5.253-3.95 7.172-4.838a99.818 99.818 0 01-1.46-4.876c-.648-2.41-1.284-5.237-1.284-7.309 0-2.452.535-4.915 1.977-6.829 1.523-2.021 3.816-3.104 6.574-3.104 2.156 0 3.986.8 5.42 2.179 1.369 1.318 2.28 3.07 2.91 4.895 1.106 3.208 1.537 7.238 1.657 11.26h2.643c.12-4.022.551-8.052 1.657-11.26.63-1.825 1.541-3.577 2.91-4.895 1.434-1.38 3.264-2.18 5.42-2.18 2.758 0 5.051 1.084 6.574 3.105 1.442 1.914 1.977 4.377 1.977 6.83 0 2.071-.636 4.898-1.284 7.308a99.707 99.707 0 01-1.46 4.876c1.919.888 4.675 2.43 7.172 4.838 3.187 3.073 6.004 7.619 6.004 13.923 0 6.543-2.823 12.325-8.144 16.4-5.257 4.026-12.782 6.268-22.124 6.275h-.047z' fill='%23633001'%3E%3C/path%3E%3Cpath d='M36.573 18.653c-4.04 0-5.9 3.045-5.9 7.256 0 3.347 2.16 10.05 3.048 12.66.199.587-.114 1.23-.686 1.458-3.238 1.29-12.794 6.012-12.794 16.828 0 11.393 9.711 19.983 27.619 19.997h.043c17.908-.014 27.619-8.604 27.619-19.997 0-10.816-9.556-15.539-12.794-16.828a1.176 1.176 0 01-.686-1.458c.887-2.61 3.048-9.313 3.048-12.66 0-4.211-1.86-7.256-5.9-7.256-5.816 0-7.266 8.322-7.37 17.254a1.084 1.084 0 01-1.074 1.08h-5.73c-.59 0-1.067-.484-1.074-1.08-.103-8.932-1.553-17.254-7.369-17.254z' fill='%23D1884F'%3E%3C/path%3E%3Cpath d='M47.903 73.202c-13.158 0-27.64-7.115-27.662-16.326v.043c0 11.403 9.727 19.997 27.662 19.997s27.661-8.594 27.661-19.997v-.043c-.022 9.21-14.503 16.326-27.661 16.326z' fill='%23FEDC90'%3E%3C/path%3E%3Cpath d='M40.592 54.047c0 3.11-1.455 4.73-3.25 4.73-1.794 0-3.249-1.62-3.249-4.73 0-3.11 1.455-4.73 3.25-4.73 1.794 0 3.249 1.62 3.249 4.73zM61.712 54.047c0 3.11-1.455 4.73-3.25 4.73-1.794 0-3.248-1.62-3.248-4.73 0-3.11 1.454-4.73 3.249-4.73 1.794 0 3.25 1.62 3.25 4.73z' fill='%23633001'%3E%3C/path%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear_10493' x1='48' y1='0' x2='48' y2='96' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%2353DEE9'%3E%3C/stop%3E%3Cstop offset='1' stop-color='%231FC7D4'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
                     position: relative;
