--- a/css/_designSystem.scss
+++ b/css/_designSystem.scss
@@ -4,6 +4,10 @@
 
 @use 'functionModule' as function;
 
+@use 'inputModule' as input;
+
+@use 'buttons' as buttons;
+
 
 @mixin DivColorShow($color) {
     min-height: function.convertpx(40px);
@@ -15,68 +19,7 @@
     @return calc($pxinput / 16px)+rem;
 }
 
-@mixin input {
 
-    background-color: rgb(55, 47, 71);
-    border-radius: 16px;
-    box-shadow: rgba(74, 74, 104, 0.1) 0px 2px 2px -1px inset;
-    color: rgb(244, 238, 255);
-    display: block;
-    font-size: 16px;
-    height: 40px;
-    outline: 0px;
-    padding: 0px 16px;
-    width: 100%;
-    border: 1px solid rgb(38, 33, 48);
-}
-
-@mixin button {
-
-    align-items: center;
-    border: 0px;
-    border-radius: function.convertpx(16px);
-    box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: inherit;
-
-    font-size: function.convertpx(16px);
-    font-weight: font.$fontHeavyWeight;
-    justify-content: center;
-    letter-spacing: 0.03em;
-    line-height: 1;
-    opacity: 1;
-    outline: 0px;
-    transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
-    height: function.convertpx(48px);
-    padding: 0px function.convertpx(24px);
-    background-color: color.$buttonBlue;
-    color: white;
-    margin-right: function.convertpx(8px);
-}
-
-@mixin card {
-    width: function.convertpx(300px);
-    height: function.convertpx(150px);
-    overflow: inherit;
-    background: rgb(39, 38, 44);
-    border-radius: function.convertpx(24px);
-}
-
-@mixin cardNewestArrivals {
-    @include card;
-    height: function.convertpx(24px);
-    width: function.convertpx(302px);
-    line-height: function.convertpx(24px);
-
-}
-
-@mixin cardNFT {
-    @include card;
-    border-radius: 8px 8px 8px 56px;
-    transition: opacity 200ms ease 0s;
-    width: function.convertpx(270px);
-}
 
 .card {
     @include card;
@@ -262,7 +205,7 @@ aside.third {
             align-items: center;
 
             button {
-                @include button;
+                @include buttons.button;
                 width: function.convertpx(150px);
 
                 &.arrow-bluebutton-white img {
@@ -575,12 +518,12 @@ input:invalid,
                 }
 
                 >button:last-of-type {
-                    @include button;
+                    @include buttons.button;
                     width: 100%
                 }
 
                 input {
-                    @include input;
+                    @include input.input;
                     height: function.convertpx(60px);
                     width: function.convertpx(262px);
                     margin-top: function.convertpx(10px);
