add scss, re-organized folders, add indexjs with gsap animations.

--- a/css/_colorsModule.scss
+++ b/css/_colorsModule.scss
@@ -1,5 +1,5 @@
 $mainPurple : #9a6aff;
-$buttonBlue : #1fc7d4;
+$buttonBlue : #1FC7d4;
 $orangeVarious: #ffb237;
 $mainBlack : #27262c;
 $pinkColor: #ed4b9e;
