--- a/styleSec6.scss
+++ b/styleSec6.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: color.$mainBlack;
+    background-color: #08060b
 }
 
 .blocco1flex {
@@ -104,6 +104,13 @@
         color: #f4eeff;
     }
 
+}
+
+.quadro2,
+.quadro5,
+.quadro3,
+.quadro6 {
+    border-right: 1px white solid;
 }
 
 .imgBounce {
