--- a/styleSec6.scss
+++ b/styleSec6.scss
@@ -1,3 +1,4 @@
+//Alessio start
 @use './css/colorsModule' as color;
 @use './css/functionModule' as function;
 @use './css/fontModule' as font;
@@ -160,3 +161,5 @@
     height: 50%;
     padding-left: 15px;
 }
+
+//alessio end
