--- a/styleSec6.css
+++ b/styleSec6.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #08060b;
+  background-color: rgb(8, 6, 11);
 }
 
 .blocco1flex {
@@ -69,6 +69,7 @@
 }
 .blocco1flex .textblocco1 .bottone-learn button:hover {
   background-color: #199ea7;
+  cursor: pointer;
 }
 
 .imgBounce figure {
@@ -84,7 +85,7 @@
   position: relative;
   top: 230px;
   left: 40px;
-  width: 220px;
+  width: 250px;
   z-index: 2;
 }
 .imgBounce figure #bottom-right {
@@ -122,7 +123,7 @@
 .quadro5,
 .quadro3,
 .quadro6 {
-  border-left: 0.7px white solid;
+  border-left: 1px rgb(38, 33, 48) solid;
   height: 50%;
   padding-left: 15px;
 }/*# sourceMappingURL=styleSec6.css.map */
