--- a/style.scss
+++ b/style.scss
@@ -13,24 +13,39 @@
   margin: 0;
   box-sizing: border-box;
   font-family: font.$fontFamily, sans-serif;
-  background-color: color.$mainBlack;
+  // background-color: color.$mainBlack;
 }
 
 .img-text {
   margin-top: function.convertpx(100px);
   display: flex;
   justify-content: center;
+  gap: function.convertpx(40px);
 
-  .img-motion {
-    height: function.convertpx(430px);
-    width: function.convertpx(418px);
+  figure {
+    width: function.convertpx(430px);
+    height: function.convertpx(415px);
+    position: relative;
 
-    #arrow,
-    #cake,
+    #arrow {
+      width: function.convertpx(430px);
+      height: function.convertpx(415px);
+    }
+
+    #cake {
+      width: function.convertpx(428px);
+      height: function.convertpx(428px);
+      position: absolute;
+      right: 10px;
+      z-index: 1;
+    }
+
     #folder {
-      height: function.convertpx(115px);
-      width: function.convertpx(130px);
-      display: flex;
+      width: function.convertpx(430px);
+      height: function.convertpx(415px);
+      position: absolute;
+      left: 20px;
+      z-index: 2;
     }
   }
 }
@@ -108,6 +123,7 @@
   align-items: center;
   margin-bottom: function.convertpx(20px);
   color: #f4eeff;
+  margin-top: function.convertpx(20px);
 
   span {
     color: color.$mainPurple;
@@ -129,12 +145,25 @@
   margin-left: function.convertpx(330px);
   font-weight: font.$fontHeavyWeight;
 
+  #sub-res-data {
+    h5 {
+      color: color.$mainPurple;
+      margin-bottom: function.convertpx(8px);
+    }
+
+    p {
+      color: #f4eeff;
+      margin-bottom: function.convertpx(5px);
+    }
+    p:nth-last-child(1) {
+      color: #b8add2;
+    }
+  }
+
   #subtitle-res-data {
-    border-left: function.convertpx(20px);
-    background-color: white;
-    
+    border-left: function.convertpx(1px) solid white;
     padding-left: function.convertpx(10px);
-    
+
     h5 {
       color: color.$mainPurple;
       margin-bottom: function.convertpx(8px);
